--- a/main/templates/drop/checkout/thank_you.html
+++ b/main/templates/drop/checkout/thank_you.html
@@ -14,4 +14,23 @@
   {% endif %}
 </p>
 {% endfor %}
+
+<!-- Google Code for class purchase Conversion Page -->
+<script type="text/javascript">
+  /* <![CDATA[ */
+var google_conversion_id = 1019454159;
+var google_conversion_language = "en";
+var google_conversion_format = "3";
+var google_conversion_color = "ffffff";
+var google_conversion_label = "PQZ4CKnnkXEQz8WO5gM";
+var google_remarketing_only = false;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+  <div style="display:inline;">
+    <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/1019454159/?label=PQZ4CKnnkXEQz8WO5gM&amp;guid=ON&amp;script=0"/>
+  </div>
+</noscript>
 {% endblock %}
