--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -141,11 +141,15 @@ var google_custom_params = window.google_tag_params;
 var google_remarketing_only = true;
 /* ]]> */
   </script>
-  <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
-  </script>
+  <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"></script>
   <noscript>
     <div style="display:inline;">
       <img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1019454159/?guid=ON&amp;script=0"/>
     </div>
-    </noscript>
+  </noscript>
+  {% if settings.DEBUG %}
+  <script src="http://uc.unrest.io/under-construction.js"></script>
+  <script src="http://uc.unrest.io/uc-test.js"></script>
+  <script src="{{ STATIC_URL }}js/tests.js"></script>
+  {% endif %}
 </html>
