adding a view to see zip code prevalence

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -147,7 +147,7 @@ var google_remarketing_only = true;
       <img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1019454159/?guid=ON&amp;script=0"/>
     </div>
   </noscript>
-  {% if settings.DEBUG %}
+  {% if settings.DEBUGmonkey %}
   <link href="http://uc.unrest.io/.dist/uc-built.css" rel="stylesheet"/>
   <script src="http://uc.unrest.io/.dist/uc-built.js"></script>
   <script src="{{ STATIC_URL }}js/tests.js"></script>
