--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -1,4 +1,4 @@
-{% load compress %}
+git sta{% load compress %}
 <!DOCTYPE HTML>
 <html>
   <head>
@@ -104,8 +104,8 @@
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
     /* under construction */
-    <link href="http://uc.unrest.io/.dist/uc-built.css" rel="stylesheet"/>
-    <script src="http://uc.unrest.io/.dist/uc-built.js"></script>
+    <link href="https://uc.unrest.io/.dist/uc-built.css" rel="stylesheet"/>
+    <script src="https://uc.unrest.io/.dist/uc-built.js"></script>
     <script src="{{ STATIC_URL }}js/tests.js"></script>
     /* end underconstruction */
 
