under-construction working on txrx again

--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -36,7 +36,7 @@
     </ul>
   </div>
   {% endif %}
-  <ur-tabs>
+  <ur-tabs id="course-tabs">
     <ur-tab title="All Classses">
       <div id="scheduled-courses"></div>
       <div class="course_divider" style="display:none">
