--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -103,7 +103,7 @@
     <script src="{{ STATIC_URL }}sessions.json?v={% now "ymd_his" %}"></script>
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 
-    {% if settings.DEBUGarst %}
+    {% if settings.DEBUG %}
     <link href="https://uc.unrest.io/.dist/uc-built.css" rel="stylesheet"/>
     <script src="https://uc.unrest.io/.dist/uc-built.js"></script>
     <script src="{{ STATIC_URL }}js/tests.js"></script>
