--- a/main/templates/_styles.html
+++ b/main/templates/_styles.html
@@ -4,4 +4,5 @@
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}unrest/.dist/unrest-built.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}drop/.dist/drop-built.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}unrest_comments/.dist/unrest_comments.css">
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}unrest/simplemde/simplemde.min.css">
 {% endcompress %}
