--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -99,6 +99,8 @@
     <script src="{{ STATIC_URL }}txrx-built.js"></script>
     <script src="{{ STATIC_URL }}unrest_comments/.dist/unrest_comments.js"></script>
     <script src="{{ STATIC_URL }}cv/float.js"></script>
+    <script src="{{ STATIC_URL }}unrest/.dist/simplemde-built.js"></script>
+    <script src="{{ STATIC_URL }}unrest/simplemde/simplemde.min.js"></script>
     {% endcompress %}
     <script src="{{ STATIC_URL }}classes.json?v={% now "ymd_hi" %}"></script>
     <script src="{{ STATIC_URL }}sessions.json?v={% now "ymd_his" %}"></script>
