nuking some depracated files and moving other code to lablackey

--- a/main/templates/_styles.html
+++ b/main/templates/_styles.html
@@ -1,6 +1,7 @@
 {% load compress %}
 {% compress css %}
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}txrx-built.css">
+<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}blog.less">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}unrest/.dist/unrest-built.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}drop/.dist/drop-built.css">
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}unrest_comments/.dist/unrest_comments.css">
