styling changes in unrest

--- a/main/static/less/cart.less
+++ b/main/static/less/cart.less
@@ -1,6 +1,7 @@
 .store-button { display:none; }
 shopping-cart .payment_buttons {
   max-width: 400px;
+  margin: 0 auto;
 }
 .mobile-cart {
   border: none;
