--- a/main/static/less/form.less
+++ b/main/static/less/form.less
@@ -38,6 +38,11 @@ ur-form {
   p.blue { color: @blue; }
 }
 
+ur-form .non_field_error {
+  color: red;
+  text-align: center;
+}
+
 .messagelist {
   list-style: none;
   margin: 0 auto 20px;
