--- a/main/templates/_new_styles.html
+++ b/main/templates/_new_styles.html
@@ -4,5 +4,6 @@
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/_materialize.css">
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}less/redesign.less">
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}unrest/.dist/unrest-built.css">
+<link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}unrest/less/materialize.css">
 <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}unrest_comments/.dist/unrest_comments.css">
 {% endcompress %}
