--- a/notify/templates/notify/settings.html
+++ b/notify/templates/notify/settings.html
@@ -9,7 +9,7 @@
 <number-display></number-display>
 <hr />
 <h2>Notification Settings</h2>
-<ur-form id="notify-form" autosubmit="true">
+<ur-form id="notify-form" autosubmit="true" method="POST">
   <yield to="button_div"><p class="blue">* SMS, standard rates apply.</p></yield>
 </ur-form>
 <script type="riot/tag">
