--- a/notify/templates/notify/settings.html
+++ b/notify/templates/notify/settings.html
@@ -79,6 +79,13 @@
   }
   </phone-number>
 </script>
+<style>
+.ur-input {
+    padding-bottom: 15px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #eee;
+}
+</style>
 <script>
   uR.ready(function() {
     uR.auth.ready(function() { riot.mount("number-display"); });
