splitting out money widget and support from txrx file

--- a/main/static/less/base.less
+++ b/main/static/less/base.less
@@ -25,6 +25,9 @@
 @import "store.less";
 @import "event.less";
 
+@import "support.less";
+@import "money-widget.less";
+
 // ur stuff
 @import "modal.less";
 @import "form.less";
