--- a/main/templates/footer.html
+++ b/main/templates/footer.html
@@ -1,9 +1,13 @@
-<div class="left">{{ settings.SITE_NAME }} - {{ SITE_TAGLINE }}</div>
-<div class="center">
-  <a href="https://goo.gl/maps/xD5ST">205 Roberts Street, Houston, TX</a>
-</div>
-<div class="right">
-  Google groups:
-  <a href="https://groups.google.com/forum/#!forum/txrxlabs">[Public]</a>
-  <a href="https://groups.google.com/forum/#!forum/txrxmembership">[Members]</a>
+<div class="container">
+  <footer>
+    <div class="left">{{ settings.SITE_NAME }} - {{ SITE_TAGLINE }}</div>
+    <div class="center">
+      <a href="https://goo.gl/maps/xD5ST">205 Roberts Street, Houston, TX</a>
+    </div>
+    <div class="right">
+      Google groups:
+      <a href="https://groups.google.com/forum/#!forum/txrxlabs">[Public]</a>
+      <a href="https://groups.google.com/forum/#!forum/txrxmembership">[Members]</a>
+    </div>
+  </footer>
 </div>
