--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -6,6 +6,11 @@
 @teal: #66d7d1;
 @gold: #dbd56e;
 
+/* forgive me these, railway is weird */
+@fw-normal: 400;
+@fw-bold: 700;
+@fw-bolder: 800;
+
 @screen-xs-max: 750px;
 @screen-sm-max: 970px;
 @screen-md-max: 1170px;
@@ -35,7 +40,6 @@ html,body {
 
 body {
   font-size: 16px;
-  font-weight: 600;
   overflow-x: hidden;
   overflow-y: scroll;
 }
@@ -44,27 +48,31 @@ body {
 
 img { max-width: 100%; }
 
-p { margin: 0 0 1rem; }
+p {
+  line-height: 1.4;
+  margin: 0 0 1rem;
+}
 
 a, a:hover {
   color: inherit;
   text-decoration: none;
 }
 
-p a, p a:hover { text-decoration: underline; }
+p, li {
+  a, a:hover { text-decoration: underline; }
+}
 
 /* globals.less */
 .row { margin-bottom: 1.5rem; }
 
 .lead {
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-size: 20px;
+  font-weight: @fw-bold;
 }
 
 .btn {
   display: inline-block;
   margin-bottom: 0;
-  font-weight: normal;
   text-align: center;
   vertical-align: middle;
   cursor: pointer;
@@ -78,19 +86,36 @@ p a, p a:hover { text-decoration: underline; }
   user-select: none;
 }
 
-#crafters-page .btn {
+.crafters-page .btn {
   color: white;
-  font-weight: bolder;
+  font-weight: @fw-bolder;
   text-transform: uppercase;
 }
 
-#crafters-page {
+.crafters-page .big-button {
+  padding: 20px 0 60px;
+  text-align: center;
+  .btn {
+    font-size: 2em;
+    @media (max-width: @screen-xs-max) { white-space: initial; }
+  }
+}
+
+.crafters-page {
   font-size: 18px;
   .description {
     color: white;
+    font-weight: @fw-bold;
     &.border {
-      border-bottom: 1px solid;
-      border-top: 1px solid;
+      > p:first-child {
+        border-top: 1px solid;
+        padding-top: 1rem;
+      }
+      > p:last-child {
+        border-bottom: 1px solid;
+        padding-bottom: 1rem;
+        margin-bottom: 0;
+      }
     }
   }
 }
@@ -109,11 +134,12 @@ nav {
   position: relative;
   text-align: right;
   text-transform: uppercase;
-  a {
+  .links a {
     display: inline-block;
+    font-size: 12px;
+    font-weight: @fw-bolder;
     height: @nav-height;
-    letter-spacing: 1px;
-    font-weight: bold;
+    letter-spacing: 2px;
     line-height: @nav-height;
     padding-left: 20px;
   }
@@ -135,18 +161,25 @@ nav .logo {
   width: 33.333%;;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: 2px;
 }
 
 footer {
   background: @black;
   bottom: 0;
   color: white;
-  font-weight: normal;
+  font-size: 16px;
+  font-weight: @fw-normal;
   width: 100%;
   .btn {
     margin: 0 auto;
     width: 89px;
+  }
+  .lead {
+    padding: 1rem 0 0.8rem;
+  }
+  .bottom {
+    font-size: 12px;
   }
 }
 
@@ -154,8 +187,8 @@ footer {
   @o: 0.0333em;
   border-bottom: 4px solid @orange;
   font-size: 108px;
-  font-weight: bolder;
-  margin-bottom: 20px;
+  font-weight: @fw-bolder;
+  margin-bottom: 3rem;
   text-align: center;
   text-shadow: -@o -@o 0 @orange, @o @o 0 white;
   @media (max-width: @screen-md-max) { font-size: 89px; }
@@ -165,11 +198,41 @@ footer {
 
 .white-bg {
   background: #eee;
+  font-weight: @fw-normal;
+  font-size: 14px;
   padding-top: 3rem;
+  margin-bottom: 30px;
   .airtable-embed {
     display: block;
     margin: 0 auto 3rem;
     max-width: 500px;
+  }
+  .col-sm-8 { padding: 0 40px; }
+  @media (max-width: @screen-xs-max) {
+    padding: 3rem 1rem;
+    img { margin: 0 0 20px; }
+  }
+}
+
+.half-flexy {
+  display: flex;
+  margin: 0 -15px 3rem;
+  .column {
+    width: 50%;
+    flex-basis: 50%;
+    padding: 15px;
+    align-items: stretch;
+  }
+  .has-bg-right {
+    background-size: cover;
+    background-position: right;
+    width: 100%;
+    height: 100%;
+  }
+  @media (max-width: @screen-xs-max) {
+    display: block;
+    .column { width: 100% }
+    .has-bg-right { display: none; }
   }
 }
 
@@ -179,10 +242,10 @@ footer {
   .orange-bar {
     background-color: @orange;
     font-size: 30px;
-    font-weight: bolder;
-    height: 40px;
+    font-weight: @fw-bolder;
+    height: 46px;
     letter-spacing: 0.2em;
-    line-height: 40px;
+    line-height: 46px;
     position: absolute;
     text-align: center;
     text-transform: uppercase;
@@ -192,17 +255,25 @@ footer {
 }
 
 money-widget {
-  margin: 0 auto 2rem;
-  max-width: 500px;
-  .btn { position: relative; }
+  margin: 2rem auto 3rem;
+  max-width: 600px;
+  .btn {
+    font-size: 24px;
+    font-weight: @fw-bold;
+    position: relative;
+  }
   .btn-group.first {
+    margin-bottom: 2rem;
     border-radius: 0;
     justify-content: space-around;
     .btn {
-      flex-grow: 0;
-      @w: 75px;
-      height: 37px;
+      @w: 100px;
+      padding: 0;
       width: @w;
+    }
+    @media (max-width: @screen-xs-max) {
+      flex-wrap: wrap;
+      .btn { margin-bottom: 20px; }
     }
   }
   input[type=text] {
@@ -211,7 +282,20 @@ money-widget {
     width: 50px;
   } /* get out of sight! */
   .btn-primary input,input[type=text]:focus { top: 0; }
-  + img { display: block; max-width: 500px; margin: 0 auto 3rem; }
+  + img { display: block; width: 500px; margin: 0 auto 3rem; }
+}
+
+money-widget .btn-group > .btn {
+  flex-grow: 0;
+  margin: 0 auto;
+  height: 55px;
+  label {
+    line-height: 53px;
+  }
+}
+
+.bottom-donate {
+  font-size: 24px;
 }
 
 .btn {
