--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -17,7 +17,7 @@
 
 body {
   position: relative;
-  &:after {
+  /*&:after {
     border: 4px double black;
     padding: 5px 10px;
     position: fixed;
@@ -27,7 +27,7 @@ body {
     @media (max-width: @screen-md-max) { content: "md"; }
     @media (max-width: @screen-sm-max) { content: "sm"; }
     @media (max-width: @screen-xs-max) { content: "xs"; }
-  }
+  }*/
 }
 
 /* base.less */
