removing featured projects

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -14,7 +14,7 @@
   </div>
 </section>
 {% endthumbnail %}
-<section class="FeaturedThings row">
+<!--<section class="FeaturedThings row">
   <h3 class="block_title">Featured Projects</h3>
   <div class="things">
     {% for thing in things %}{# this needs to be unified with tool_detail and generalized #}
@@ -34,7 +34,7 @@
     {% endfor %}
   </div>
   <a class="ViewAll colored-link" href="{% url "thing_index" %}">View More Projects &raquo;</a>
-</section>
+</section>-->
 <section class="BlogList row">
   <h3 class="block_title">Recent Blogs</h3>
   {% include "_blog_list.html" %}
