--- a/main/templates/crafters/base.html
+++ b/main/templates/crafters/base.html
@@ -14,8 +14,8 @@
 <nav>
   <a href="/" class="logo"></a>
   <div class="links">
-    <a href="/makeathons/">Makeathons</a>
-    <a href="/seminars/">Seminars</a>
+    <a href="/crafters-for-good/makeathons/">Makeathons</a>
+    <a href="/crafters-for-good/seminars/">Seminars</a>
     <a href="/" class="hidden-xs">TXRX Labs</a>
   </div>
 </nav>
