--- a/main/templates/crafters/makeathons.html
+++ b/main/templates/crafters/makeathons.html
@@ -42,6 +42,7 @@
         plans, and organization, but we'll need your helping hands to build these items.
       </p>
       <p>
+        We're asking for volunteers age 18+ to assist in the effort.
         No previous experience is needed. Our expert staff will walk you through the
         steps and show you how to operate tools and equipment safely. Whether you're a
         master woodworker or just curious about making, we invite you to join us and use
