--- a/main/templates/crafters/base.html
+++ b/main/templates/crafters/base.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load short_codes static compress %}
 
-{% block full_title %}{% endblock %}
+{% block full_title %}Crafters For Good at TXRX Labs{% endblock %}
 {% block header %}{% endblock %}
 {% block head_styles %}
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,800" rel="stylesheet">
