--- a/main/templates/crafters/index.html
+++ b/main/templates/crafters/index.html
@@ -16,16 +16,16 @@
 <div class="row">
   <div class="col-sm-6">
     <a href="/crafters-for-good/makeathons/" class="pic-link">
-      {% thumbnail "crafters/bench.jpg" "400x400" as im %}
-      <img src="{% static "crafters/bench.jpg" %}">
+      {% thumbnail "https://txrxlabs.org/static/crafters/bench.jpg" "600x600" as im %}
+      <img src="{{ im.url }}"/>
       {% endthumbnail %}
       <span class="orange-bar">Makeathons</span>
     </a>
   </div>
   <div class="col-sm-6">
     <a href="/crafters-for-good/seminars/" class="pic-link">
-      {% thumbnail "crafters/ronnie.jpg" "400x400" as im %}
-      <img src="{% static "crafters/ronnie.jpg" %}">
+      {% thumbnail "https://txrxlabs.org/static/crafters/ronnie.jpg" "600x600" as im %}
+      <img src="{{ im.url }}" />
       {% endthumbnail %}
       <span class="orange-bar">Seminars</span>
     </a>
