more thumbnails and font color change

--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -104,7 +104,7 @@ p, li {
 .crafters-page {
   font-size: 18px;
   .description {
-    color: white;
+    color: @black;
     font-weight: @fw-bold;
     &.border {
       > p:first-child {
