--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -8,8 +8,8 @@
 TXRX's Shop Manager Ronnie Devries is a certified jack of all trades, master of all. To further help Houstonians affected by Harvey, he will be holding workshops at TXRX in the coming days to help people understand the work that will need to be done to repair their homes, along with any associated costs, so that folks can begin working with contractors without being scammed or taken advantage of. This will be a free service by Ronnie Devries and TXRX as a way to help the community rebuild.
   </div>
   <div class="col-sm-6">
-    {% thumbnail "crafters/ronnie.jpg" "400x400" as im %}
-    <img src="{% static "crafters/ronnie.jpg" %}">
+    {% thumbnail "https://txrxlabs.org/static/crafters/ronnie.jpg" "600x600" as im %}
+    <img src="{{ im.url }}">
     {% endthumbnail %}
   </div>
 </div>
@@ -36,8 +36,8 @@ TXRX's Shop Manager Ronnie Devries is a certified jack of all trades, master of 
       </ul>
     </div>
     <div class="col-sm-4">
-      {% thumbnail "crafters/table.jpg" "400x400" as im %}
-      <img src="{% static "crafters/table.jpg" %}">
+      {% thumbnail "https://txrxlabs.org/static/crafters/table.jpg" "600x600" as im %}
+      <img src="{{ im.url }}">
       {% endthumbnail %}
     </div>
   </div>
