--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -120,6 +120,11 @@ p, li {
   }
 }
 
+.crafters-page .sponsor {
+  margin-bottom: 30px;
+  text-align: center;
+}
+
 /* nav.less */
 @nav-height: 100px;
 body {
