--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -52,5 +52,13 @@ TXRX's Shop Manager Ronnie Devries is a certified jack of all trades, master of 
     materials needs.
   </p>
   <money-widget hide_monthly="true" donate_text="Donate"></money-widget>
+  <div class="sponsor">
+    <h2>Seminars sponsored by Gallery Furniture</h2>
+    <a href="https://www.galleryfurniture.com/">
+      {% thumbnail "https://txrxlabs.org/static/crafters/gf_logo.jpg" "600x600" as im %}
+      <img src="{{ im.url }}">
+      {% endthumbnail %}
+    </a>
+  </div>
 </div>
 {% endblock %}
