--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -186,6 +186,13 @@ footer {
   .bottom {
     font-size: 12px;
   }
+  p { text-align: justify; }
+  .social {
+    text-align: center;
+    .btn { margin-bottom: 20px; }
+    .fa { font-size: 2rem; padding: 0 10px;}
+  }
+  .right { float: right; }
 }
 
 .crafters-title {
