--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -5,7 +5,7 @@
 {% block main-inner %}
 <div class="row">
   <div class="col-sm-6 description">
-TXRX's Shop Manager Ronnie Devries is a certified jack of all trades, master of all. To further help Houstonians affected by Harvey, he will be holding workshops at TXRX in the coming days to help people understand the work that will need to be done to repair their homes, along with any associated costs, so that folks can begin working with contractors without being scammed or taken advantage of. This will be a free service by Ronnie Devries and TXRX as a way to help the community rebuild.
+TXRX&rsquo;s Shop Manager Ronnie Devries is a certified jack of all trades, master of all. To further help Houstonians affected by Harvey, he will be holding workshops at TXRX in the coming days to help people understand the work that will need to be done to repair their homes, along with any associated costs, so that people can begin working with contractors without being scammed or taken advantage of. This will be a free service by Ronnie Devries and TXRX as a way to help the community rebuild.
   </div>
   <div class="col-sm-6">
     {% thumbnail "https://txrxlabs.org/static/crafters/ronnie.jpg" "600x600" as im %}
@@ -32,7 +32,7 @@ TXRX's Shop Manager Ronnie Devries is a certified jack of all trades, master of 
         <li><a href="https://www.bbb.org/houston/">Houston Better Business Bureau</a></li>
         <li><a href="https://www.angieslist.com/companylist/houston/contractor.htm">Angie&rsquo;s List contractors</a></li>
         <li><a href="https://www.fema.gov/hurricane-harvey-rumor-control">Hurricane Harvey rumor control</a></li>
-        <li><a href="https://docs.google.com/document/d/1HEBcT5V2TCk3eyz25OLidQXKcPXgPydGHhWUZHez2RQ/edit?usp=sharing">Flood Damage Cleanup Tips</li>
+        <li><a href="https://docs.google.com/document/d/1HEBcT5V2TCk3eyz25OLidQXKcPXgPydGHhWUZHez2RQ/edit?usp=sharing">Flood Damage Cleanup Tips</a></li>
       </ul>
     </div>
     <div class="col-sm-4">
@@ -41,8 +41,46 @@ TXRX's Shop Manager Ronnie Devries is a certified jack of all trades, master of 
       {% endthumbnail %}
     </div>
   </div>
+
+  <h2><center>Seminar Schedule</center></h2>
+  <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
+    <tr>
+      <th></th>
+      <th>September 16, 2017</th>
+    </tr>
+    <tr>
+      <th>11am-12pm</th>
+      <td>Cleaning and Remediation tips</td>
+    </tr>
+    <tr>
+      <th>1pm-2pm</th>
+      <td>Insurance / FEMA / Contractor tips</td>
+    </tr>
+    <tr>
+      <th>3pm-6pm</th>
+      <td>DIY Repairs (insulation, drywall and trim carpentry)</td>
+    </tr>
+  </table>
+  <table class="table table-striped" style="max-width: 500px; margin: 0 auto;">
+    <tr>
+      <th></th>
+      <th>September 17, 2017</th>
+    </tr>
+    <tr>
+      <th>11am-12pm</th>
+      <td>Cleaning and Remediation tips</td>
+    </tr>
+    <tr>
+      <th>1pm-2pm</th>
+      <td>Insurance / FEMA / Contractor tips</td>
+    </tr>
+    <tr>
+      <th>3pm-6pm</th>
+      <td>DIY Repairs (insulation, drywall and trim carpentry)</td>
+    </tr>
+  </table>
   <div class="big-button">
-    <a class="btn btn-primary" href="https://airtable.com/shrwm6uNzm3Hhkv0l">Sign up to Learn More!</a>
+    <a class="btn btn-primary" href="https://airtable.com/shrOWgN7Y1G6IqZuH">Register Here</a>
   </div>
 </div>
 <div class="bottom-donate">
