--- a/main/templates/crafters/base.html
+++ b/main/templates/crafters/base.html
@@ -7,6 +7,7 @@
 <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,800" rel="stylesheet">
 {% compress css %}
 <link rel="stylesheet" href="{% static "less/grid12.css" %}"/>
+<link rel="stylesheet" href="{% static "less/_bs_tables.css" %}"/>
 <link rel="stylesheet" type="text/less" href="{% static "less/crafters.less" %}"/>
 {% endcompress %}
 {% endblock %}
