custom descriptions on donations buttons

--- a/main/templates/crafters/index.html
+++ b/main/templates/crafters/index.html
@@ -31,4 +31,5 @@
     </a>
   </div>
 </div>
+<money-widget hide_monthly="true" donate_text="Donate" description="Crafters for Good donation"></money-widget>
 {% endblock %}
