--- a/main/templates/crafters/makeathons.html
+++ b/main/templates/crafters/makeathons.html
@@ -68,7 +68,8 @@
     contact us at <a href="mailto:info@txrxlabs.org">info@txrxlabs.org</a> or make a selection below to support the
     materials needs.
   </p>
-  <money-widget hide_monthly="true" donate_text="Donate"></money-widget>
+  <money-widget hide_monthly="true" donate_text="Donate" description="Crafters for Good makeathons donation">
+  </money-widget>
   {% thumbnail "https://txrxlabs.org/static/crafters/helmets.jpg" "600x600" as im %}
   <img src="{{ im.url }}">
   {% endthumbnail %}
