--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -85,11 +85,12 @@ TXRX&rsquo;s Shop Manager Ronnie Devries is a certified jack of all trades, mast
 </div>
 <div class="bottom-donate">
   <p class="lead">
-    If you can&rsquo;t make the event but want to contribute by sponsoring supplies,
-    contact us at <a href="mailto:info@txrxlabs.org">info@txrxlabs.org</a> or make a selection below to support the
-    materials needs.
+    If you can&rsquo;t make the event but want to contribute
+    contact us at <a href="mailto:info@txrxlabs.org">info@txrxlabs.org</a> or make a selection below to support these
+    efforts.
   </p>
-  <money-widget hide_monthly="true" donate_text="Donate"></money-widget>
+  <money-widget hide_monthly="true" donate_text="Donate" description="Crafters for Good seminars donation">
+  </money-widget>
   <div class="sponsor">
     <h2>Seminars sponsored by Gallery Furniture</h2>
     <a href="https://www.galleryfurniture.com/">
