--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -177,7 +177,6 @@ footer {
   font-weight: @fw-normal;
   width: 100%;
   .btn {
-    margin: 0 auto;
     width: 89px;
   }
   .lead {
@@ -188,8 +187,8 @@ footer {
   }
   p { text-align: justify; }
   .social {
-    text-align: center;
-    .btn { margin-bottom: 20px; }
+    display: flex;
+    justify-content: space-between;
     .fa { font-size: 2rem; padding: 0 10px;}
   }
   .right { float: right; }
