--- a/main/templates/crafters/base.html
+++ b/main/templates/crafters/base.html
@@ -51,11 +51,13 @@
           @txrxlabs or sign up for our email newsletter.
         </p>
         <div class="social">
-          <div><a class="btn btn-primary" href="http://eepurl.com/uhcT1">Subscribe</a></div>
-          <a href="https://www.facebook.com/TxRxLabs"><i class="fa fa-facebook"></i></a>
-          <a href="https://twitter.com/txrxlabs"><i class="fa fa-twitter"></i></a>
-          <a href="https://instagram.com/txrxlabs/"><i class="fa fa-instagram"></i></a>
-          <a href="mailto:info@txrxlabs.org"><i class="fa fa-envelope"></i></a>
+          <a class="btn btn-primary" href="http://eepurl.com/uhcT1">Subscribe</a>
+          <div>
+            <a href="https://www.facebook.com/TxRxLabs"><i class="fa fa-facebook"></i></a>
+            <a href="https://twitter.com/txrxlabs"><i class="fa fa-twitter"></i></a>
+            <a href="https://instagram.com/txrxlabs/"><i class="fa fa-instagram"></i></a>
+            <a href="mailto:info@txrxlabs.org"><i class="fa fa-envelope"></i></a>
+          </div>
         </div>
       </div>
       <div class="col-xs-12 bottom">
