goodbye little lines

--- a/main/templates/crafters/makeathons.html
+++ b/main/templates/crafters/makeathons.html
@@ -4,7 +4,7 @@
 
 {% block main-inner %}
 <div class="half-flexy" style="color: white;">
-  <div class="column description border">
+  <div class="column">
     <p>
       In an effort to support our community and assist
       our city in rebuilding, TXRX Labs has launched a
