--- a/main/templates/crafters/makeathons.html
+++ b/main/templates/crafters/makeathons.html
@@ -3,8 +3,8 @@
 {% block full_title %}{% endblock %}
 
 {% block main-inner %}
-<div class="half-flexy" style="color: white;">
-  <div class="column">
+<div class="half-flexy">
+  <div class="column description">
     <p>
       In an effort to support our community and assist
       our city in rebuilding, TXRX Labs has launched a
