--- a/main/templates/crafters/makeathons.html
+++ b/main/templates/crafters/makeathons.html
@@ -56,6 +56,11 @@
         If you would like to volunteer to participate, please fill out the form below and
         choose one of the 4-6 hour scheduled shifts.
       </p>
+      <p>
+        Please note: All volunteers will be asked to sign the
+        <a href="https://docs.google.com/document/d/1jPJA0vHv3woYiv8bhbXtQkVrYmlQ5I1gDt5S2nyGINQ/edit?usp=sharing">
+          this waiver</a>.
+      <p>
     </div>
   </div>
   <div class="big-button">
