--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -223,6 +223,12 @@ footer {
     padding: 3rem 1rem;
     img { margin: 0 0 20px; }
   }
+  .note {
+    margin: 2rem auto 0;
+    font-weight: bold;
+    text-align: center;
+    max-width: 600px;
+  }
 }
 
 .half-flexy {
