--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -11,7 +11,7 @@
   </div>
   <div class="column">
     {% thumbnail "https://txrxlabs.org/static/crafters/ronnie.jpg" "600x600" as im %}
-    <div class="has-bg-right" style="background-image:url({{ im.url }})"></div>
+    <img src="{{ im.url }}"/>
     {% endthumbnail %}
   </div>
 </div>
@@ -94,6 +94,7 @@
   </table>
   <div class="big-button">
     <a class="btn btn-primary" href="https://airtable.com/shrOWgN7Y1G6IqZuH">Register Here</a>
+    <div class="note"> Note: Space is very limited and signing up does not guarentee enrollment. You will be sent a confirmation letter by email if your registration is approved.</div>
   </div>
 </div>
 <div class="bottom-donate">
