--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -223,8 +223,10 @@ footer {
     padding: 3rem 1rem;
     img { margin: 0 0 20px; }
   }
+  .btn { margin-bottom: 20px; }
   .note {
-    margin: 2rem auto 0;
+    margin: 0 auto 2rem;
+    font-size: 1.2em;
     font-weight: bold;
     text-align: center;
     max-width: 600px;
