--- a/main/templates/crafters/seminars.html
+++ b/main/templates/crafters/seminars.html
@@ -45,27 +45,43 @@
   </div>
 
   <h2><center>Seminar Schedule</center></h2>
+  <p class="note">
+    These one hour workshops will cover how to navigate the process of getting your house clean,
+    dealing with insurance companies and FEMA, and dealing with contractors and some resources for DIY remodelers.
+  </p>
+  <p class="note">
+    <b>Location:</b>
+    <a href="https://maps.google.com/?q=TXRX Labs, Houston, TX"><br/>
+      <img width="200" src="/static/crafters/logo.png" /><br/>
+      <u>205 Roberts St.<br/> Houston TX, 77003</u>
+    </a>
+  </p>
   <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
     <tr>
       <th></th>
-      <th>September 16, 2017</th>
+      <th>Friday September 15</th>
+    </tr>
+    <tr>
+      <th>7pm-8pm</th>
+      <td>Harvey Relief Seminar</td>
+    </tr>
+  </table>
+  <table class="table table-striped" style="max-width: 500px; margin: 0 auto 40px;">
+    <tr>
+      <th></th>
+      <th>Saturday September 16</th>
     </tr>
     <tr>
       <th>11am-12pm</th>
-      <td>Cleaning and Remediation tips</td>
+      <td>Harvey Relief Seminar</td>
     </tr>
     <tr>
       <th>1pm-2pm</th>
-      <td>Insurance / FEMA / Contractor tips</td>
+      <td>Harvey Relief Seminar</td>
     </tr>
     <tr>
-      <th>3pm-6pm</th>
-      <td>DIY Repairs (insulation, drywall and trim carpentry)</td>
-    </tr>
-    <tr>
-      <th>Location</th>
-      <td>TXRX Labs -
-        <u><a href="https://maps.google.com/?q=TXRX Labs, Houston, TX">205 Roberts St. Houston TX 77003</a></u></td>
+      <th>3pm-4pm</th>
+      <td>Harvey Relief Seminar</td>
     </tr>
   </table>
   <table class="table table-striped" style="max-width: 500px; margin: 0 auto;">
@@ -75,21 +91,15 @@
     </tr>
     <tr>
       <th>11am-12pm</th>
-      <td>Cleaning and Remediation tips</td>
+      <td>Harvey Relief Seminar</td>
     </tr>
     <tr>
       <th>1pm-2pm</th>
-      <td>Insurance / FEMA / Contractor tips</td>
+      <td>Harvey Relief Seminar</td>
     </tr>
     <tr>
-      <th>3pm-6pm</th>
-      <td>DIY Repairs (insulation, drywall and trim carpentry)</td>
-    </tr>
-    <tr>
-      <th>Location</th>
-      <td>TXRX Labs -
-        <u><a href="https://maps.google.com/?q=TXRX Labs, Houston, TX">205 Roberts St. Houston TX 77003</a></u>
-      </td>
+      <th>3pm-4pm</th>
+      <td>Harvey Relief Seminar</td>
     </tr>
   </table>
   <div class="big-button">
