--- a/main/static/less/crafters.less
+++ b/main/static/less/crafters.less
@@ -263,6 +263,7 @@ footer {
     font-size: 30px;
     font-weight: @fw-bolder;
     height: 46px;
+    left:0;
     letter-spacing: 0.2em;
     line-height: 46px;
     position: absolute;
